<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackgroundColor"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/activity_main_txtVw_score_label_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Score"
        style="@style/LabelText"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>
    <TextView
        android:id="@+id/activity_main_txtVw_score_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_main_txtVw_score_label_id"
        android:text="@string/activity_main_txtVw_score_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        style="@style/RemainingTime"/>

    <TextView
        android:id="@+id/activity_main_txtVw_difficulty_label_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Difficulty"
        style="@style/LabelText"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"/>
    <TextView
        android:id="@+id/activity_main_txtVw_difficulty_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_main_txtVw_difficulty_label_id"
        android:text="E1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        style="@style/RemainingTime"/>

    <TextView
        android:id="@+id/activity_main_txtVw_remaining_time_label_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Time Remaining"
        style="@style/LabelText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/activity_main_txtVw_remaining_time_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_main_txtVw_remaining_time_label_id"
        android:text="@string/activity_main_remaining_time_text"
        android:layout_centerHorizontal="true"
        style="@style/RemainingTime"/>

    <TextView
        android:id="@+id/activity_main_txtVw_nextToPlay_label_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_to_play_text"
        android:layout_marginBottom="16dp"
        style="@style/LabelText"
        android:layout_above="@+id/activity_main_lnrLyt_boardBackground_id"
        android:layout_toLeftOf="@+id/activity_main_imgVw_nextToPlay_id"
        android:layout_toStartOf="@+id/activity_main_imgVw_nextToPlay_id"/>

    <ImageView
        android:id="@+id/activity_main_imgVw_nextToPlay_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_main_lnrLyt_boardBackground_id"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@null"/>
    <LinearLayout
        android:id="@+id/activity_main_lnrLyt_boardBackground_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/board_background"
        android:padding="16dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <android.support.v7.widget.GridLayout
            android:id="@+id/activity_main_grdVw_puzzle_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="3"
            app:rowCount="3"
            app:orientation="horizontal"
            app:alignmentMode="alignBounds"
            app:rowOrderPreserved="false"
            />
    </LinearLayout>

</RelativeLayout>